Config paths: test with toNamespacedPath

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eslint-plugin",
+  "name": "kirov-sv-eslint-plugin",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
